# retro-web-gateway

./: .gitignore  CMakeLists.txt  README.md  template.yaml  testing_plan.md
include/: fetcher.h  html_simplifier.h  image_processor.h
scripts/: build.sh  proxy.pac
scripts/relay/: docker-compose.yml  nginx.conf
src/: fetcher.cpp  html_simplifier.cpp  image_processor.cpp  main.cpp
